# prophet_strategies

./: .env.example  .gitignore  DEPLOY_VPS.md  PROJECT_CONTEXT.md  README.md  check_outcomes.py  check_progress.py  check_readiness.py  check_results.py  check_stats.py  debug_400.py  debug_join.py  docker-compose.yml  final_check.py  head.txt  list_tables.py  promp.txt  rebuild_markets.py  requirements.txt  summarize_results.py  test_ids.py
src/engine/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
src/engine/alembic/: env.py
src/engine/alembic/versions/: 0001_initial.py  0002_add_market_category.py  0003_add_signal_spread_columns.py  0004_add_market_volume.py
src/engine/prophet/: config.py  main.py
src/engine/prophet/api/: app.py  middleware.py  schemas.py
src/engine/prophet/core/: __init__.py  auto_optimizer.py  data_collector.py  indicators.py  intraday_collector.py  llm_filter.py  order_manager.py  scanner.py  scheduler.py  signal_generator.py  telegram_bot.py  ws_listener.py
src/engine/prophet/db/: __init__.py  database.py  models.py  repositories.py
src/engine/prophet/live/: __init__.py  live_models.py  live_risk.py  live_trader.py  signal_router.py
src/engine/prophet/polymarket/: __init__.py  clob_client.py  gamma_client.py  models.py  orderbook.py  price_feeds.py
src/engine/prophet/strategies/: __init__.py  auto_hedge_strategy.py  base.py  contra_srb_strategy.py  dca_strategy.py  (+12 more)
src/engine/scripts/: deploy.sh  migrate_backtest.py  setup_db.py
src/engine/tests/: conftest.py  test_order_manager.py  test_strategies.py
(+123 files in other folders)
